<resources>
    <string name="app_name">ExoPlayer-M3U8</string>

    <!--  Player accessibility  -->
    <string name="time_bar_description">Time bar</string>
    <string name="button_back_description">Back</string>
    <string name="button_back_to_start_description">Back to start</string>
    <string name="button_previous_description">Previous</string>
    <string name="button_next_description">Next</string>
    <string name="button_play_description">Play</string>
    <string name="repeat_mode_off">Modo de repetição desligado</string>
    <string name="repeat_mode_one">Repetir mídia</string>
    <string name="repeat_mode_all">Repetir temporada</string>
    <string name="playback_loading_media">Carregando mídia...</string>
</resources>
